--- a/schoolnotes/abstracta/firstcourse/abstracta.tex
+++ b/schoolnotes/abstracta/firstcourse/abstracta.tex
@@ -41,6 +41,8 @@
 \begin{defi}[Binary Algebraic Structure]
 	A binary algebraic structure \(\langle S, *\rangle\) is a set \(S\) together with a binary operation \(*\) on \(S\).
 \end{defi}
+\begin{defi}[Euclidean algorithm]
+\end{defi}
 \begin{defi}[Isomorphism]
 	Let \(\langle S,*\rangle\)  and \(\langle S', *'\rangle\) be binary algebraic structures. An isomorphism of \(S\) with \(S'\) is a one-to-one function\footnote{if no one-to-one function exists but the homomorphism property is satisfied, than phi is a homomorphism.} \(\phi\) mapping \(S\) onto \(S'\) such that:
 	\begin{IEEEeqnarray*}{c}
