--- a/schoolnotes/optics/optics.tex
+++ b/schoolnotes/optics/optics.tex
@@ -465,4 +465,196 @@ If the angle of incidence is larger than the critical angle, the ray cannot pass
 		I_m\approx\frac{I_0}{(m+1/2)^2\pi^2}.
 	\end{equation*}
 \end{defi}
+\section{Relativity}
+\begin{defi}[Proper time]
+	Proper time refers to the time interval between two events that occur at the same point, i.e. the time for an event in the rest frame. A person on a moving train is in a rest frame relative to the train.
+\end{defi}
+\begin{defi}[Lorentz factor]
+	\begin{equation*}
+		\gamma=\frac{1}{\sqrt{1-u^2/c^2}}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Constants]
+	\,
+	\begin{enumerate}
+		\item \(h=6.626\times 10^{-34}\text{Js}\)
+	\end{enumerate}
+\end{defi}
+\begin{defi}[Time dilation]
+	The relationship between \(\Delta t\), the time in a frame of reference with speed relative to the rest frame \(u\), and the time in the rest frame \(\Delta t_0\) is:
+	\begin{equation*}
+		\Delta t=\frac{\Delta t_0}{\sqrt{1-u^2/c^2}}
+	\end{equation*}
+	In other words,
+	\begin{equation*}
+		\Delta t=\gamma\Delta t_0.
+	\end{equation*}
+\end{defi}
+\begin{defi}[Length contraction]
+	The relationship between \(l_0\), the length of the object in the reference frame, and \(l\) is
+	\begin{equation*}
+		l=l_0\sqrt{1-\frac{u^2}{c^2}}=\frac{l_0}{\gamma}
+	\end{equation*}
+\end{defi}
+\begin{defi}
+	The equation for the proper distance covered by an object in a moving reference frame, relative to its displacement in the observer frame \(x\) and the distance covered by the rest frame \(ut\) is:
+	\begin{equation*}
+		x'=\gamma(x-ut).
+	\end{equation*}
+\end{defi}
+	The equation for the proper time \(t'\) elapsed in the rest frame is
+\begin{defi}
+	\begin{equation*}
+		t'=\gamma(t-ux/c^2).
+	\end{equation*}
+\end{defi}
+\begin{defi}[Lorentz velocity transformation]
+	\begin{equation*}
+		v_x'=\frac{v_x-u}{1-uv_x/c^2}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Relativistic doppler effect]
+	If the source with frequency \(f_0\) is approaching the observer with speed \(u\), the frequency measured by the observer is
+	\begin{equation*}
+		f=\sqrt{\frac{c+u}{c-u}}f_0.
+	\end{equation*}
+\end{defi}
+\begin{defi}[Relativistic momentum]
+	\begin{equation*}
+		\vec{p}=\frac{m\vec{v}}{\sqrt{1-v^2/c^2}}=\gamma m\vec{v}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Relativistic kinetic energy]
+	\begin{equation*}
+		K=(\gamma-1)mc^2
+	\end{equation*}
+\end{defi}
+\begin{defi}[Total energy of a particle]
+	\begin{equation*}
+		E=K+mc^2=\gamma mc^2
+	\end{equation*}
+\end{defi}
+\begin{defi}[Total enegry, rest energy, and momentum]
+	\begin{equation*}
+		(mc^2)^2+(pc)^2
+	\end{equation*}
+\end{defi}
+\section{Photons and other shit}
+\begin{defi}[Cathode and anode]
+	The cathode emits electrons, the anode absorbs electrons.
+\end{defi}
+\begin{defi}[Energy of a photon]
+	\begin{equation*}
+		E=hf=\frac{hc}{\lambda}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Photoelectric effect]
+	In terms of the stopping potential of emitted electrons \(V_0\), and the work function\footnote{Minimum energy needed to remove an electron from the surface.} \(\phi\), the frequency of incident light is
+	\begin{equation*}
+		eV_0=hf-\phi.
+	\end{equation*}
+\end{defi}
+\begin{defi}[Photon momentum]
+	\begin{equation*}
+		p=\frac{E}{c}=\frac{hf}{c}=\frac{h}{\lambda}
+	\end{equation*}
+\end{defi}
+\begin{defi}[X-ray generator]
+	X-ray generators work by inducing electron emission in a cathode through heating\footnote{This is called thermionic emission}, and accelerating these electrons through a large potential difference (typically thousands of volts) with the anode. The electrons slam in to the anode so violently that x-rays are emitted as the electron accelerate to a stop. The frequency of photons emitted by the anode is given by the equation
+	\begin{equation*}
+		eV_{AC}=hf_{max}=\frac{hc}{\lambda{min}}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Compton scattering]
+	The relationship between the wavelength of incident light \(\lambda\) and that of the scattered light \(\lambda'\) is given by the following equation.
+	\begin{equation*}
+		\lambda'-\lambda=\frac{h}{mc}(1-\text{cos}\phi)
+	\end{equation*}
+\end{defi}
+\begin{defi}[Heisenberg uncertainty principle momentum and position]
+	\begin{equation*}
+		\Delta x\Delta p_x\geq \frac{h}{4\pi}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Heisinberg uncertainty principle energy and time]
+	\begin{equation*}
+		\Delta t\Delta E\geq\frac{h}{4\pi}
+	\end{equation*}
+\end{defi}
+\section{Particles behaving as waves}
+\begin{defi}[De broglie wavelength of a particle]
+	\begin{equation*}
+		\lambda=\frac{h}{p}=\frac{h}{mv}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Energy of a particle]
+	\begin{equation*}
+		E=hf
+	\end{equation*}
+\end{defi}
+\begin{defi}[De Broglie wavelength of an electron]
+	\begin{equation*}
+		\lambda=\frac{h}{p}=\frac{h}{\sqrt{2meV_{ba}}}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Energy levels]
+	\begin{equation*}
+		hf=E_i=E_f
+	\end{equation*}
+\end{defi}
+\begin{defi}[Quantization of angular momentum, H]
+	\begin{equation*}
+		L_n=mv_nr_n=n\frac{h}{2\pi}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Radius of \(n^{\text{th}}\) orbit]
+	\begin{equation*}
+		r_n=\epsilon_0\frac{n^2 h^2}{\pi me^2}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Orbital speed in \(n^{\text{th}}\) orbit]
+	\begin{equation*}
+		v_n=\frac{1}{\epsilon_0}\frac{e^2}{2nh}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Radius of \(n^{\text{th}}\) orbit]
+	\begin{equation*}
+		r_n=n^2a_0
+	\end{equation*}
+	Where \(a_0\) is
+	\begin{equation*}
+		a_0=5.29\times 10^{-11}\text{m}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Total energy for \(n^{\text{th}}\) orbit]
+	\begin{equation*}
+		E_n=-\frac{hcR}{n^2}\quad\text{Where }R=\frac{me^4}{8\epsilon_0^2h^3c}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Stefan-Boltzmann law for blackbody]
+	\begin{equation*}
+		I=\sigma T^4
+	\end{equation*}
+	Where \(T\) is temperature in kelvin, and sigma is
+	\begin{equation*}
+		\sigma=5.67\times 10^{-8}W/m^2\cdot K^4.
+	\end{equation*}
+\end{defi}
+\begin{defi}[Wein displacement law for blackbody]
+	\begin{equation*}
+		\lambda_m T=2.90\times 10^{-3}m\cdot K
+	\end{equation*}
+	Where \(\lambda_m\) is the peak wavelength emitted.
+\end{defi}
+\begin{defi}[Planck radiation law]
+	\begin{equation*}
+		I(\lambda)=\frac{2\pi hc^2}{\lambda^5(e^{hc/\lambda kT}-1)}
+	\end{equation*}
+\end{defi}
+\begin{defi}[Heisenberg uncertainty principle]
+	\begin{IEEEeqnarray*}{l}
+		\Delta x\Delta p_x\geq\frac{h}{4\pi}\\
+		\Delta t\Delta E\geq\frac{h}{4\pi}\\
+	\end{IEEEeqnarray*}
+\end{defi}
 \end{document}
